fixed snap-in of TOO SHORT error if that was the only action taken so far, by way of the initial CSS state. Error messages slide in and out in response to submissions and new characters in the text field

--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -30,7 +30,7 @@
 }
 
 .new-tweet .invalid-post {
-  display: inline-block;
+  display: none;
   float: right;
   margin-top: 0.75em;
   margin-right: 1em;
